--- a/index.html
+++ b/index.html
@@ -3,16 +3,22 @@
     <head>
         <meta charset="utf-8">
         <title>{{imp[0]}} - {{imp[1][0]}}</title>
-        <link rel="stylesheet" href="/views/liberty/bootstrap/css/bootstrap.min.css">
-        <link rel="stylesheet" href="/views/liberty/font-awesome/css/font-awesome.min.css">
+        <link rel="stylesheet" href="/views/liberty/css/font-awesome/css/font-awesome.min.css">
+        <link rel="stylesheet" href="/views/liberty/css/bootstrap.min.css">
         <link rel="stylesheet" href="/views/liberty/css/default.css">
         <link rel="stylesheet" href="/views/liberty/css/default_mobile.css">
         <link rel="stylesheet" href="/views/liberty/css/jquery-ui.min.css">
         <link rel="stylesheet" href="/views/liberty/css/style.css">
         <link rel="shortcut icon" href="/views/liberty/img/on.ico">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-        <script type="text/javascript" src="/views/liberty/js/lib/jquery-ui.min.js"></script>
-        <script type="text/javascript" src="/views/liberty/js/lib/bootstrap.min.js"></script>
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+                integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+                crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"
+                integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh"
+                crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"
+                integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1"
+                crossorigin="anonymous"></script>
         <script type="text/javascript" src="/views/liberty/js/layout.js"></script>
         {{imp[1][5]|safe}}
         {{imp[2][3]|safe}}
@@ -28,13 +34,13 @@
                 <a class="navbar-brand" href="/">{{imp[1][4]|safe}}</a>
                 <ul class="nav navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="/recent_changes"><span class="fa fa-refresh"></span><span class="hide-title">최근 변경</span></a>
+                        <a class="nav-link" href="/recent_changes"><span class="fa fa-refresh"></span><span class="hide-title">{{'recent'|load_lang}} {{'change'|load_lang}}</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/recent_discuss"><span class="fa fa-comments"></span><span class="hide-title">최근 토론</span></a>
+                        <a class="nav-link" href="/recent_discuss"><span class="fa fa-comments"></span><span class="hide-title">{{'recent'|load_lang}} {{'discussion'|load_lang}}</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/random"><span class="fa fa-random"></span><span class="hide-title">랜덤</span></a>
+                        <a class="nav-link" href="/random"><span class="fa fa-random"></span><span class="hide-title">{{'random'|load_lang}}</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/user">
@@ -45,11 +51,11 @@
                             {% else %}
                                 <span class="fa fa-user-secret"></span>
                             {% endif %}
-                            <span class="hide-title">사용자</span>
+                            <span class="hide-title">{{'user'|load_lang}}</span>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/other"><span class="fa fa-cogs"></span><span class="hide-title">기타</span></a>
+                        <a class="nav-link" href="/other"><span class="fa fa-cogs"></span><span class="hide-title">{{'tool'|load_lang}}</span></a>
                     </li>
                 </ul>
                 <form method="post" action="/search" id="searchform" class="form-inline">
@@ -111,7 +117,7 @@
                         {{imp[1][1]|safe}}
                     </p>
                     <div id="powered">
-                        <a href="https://github.com/2DU/openNAMU"><img src="/views/liberty/img/on2.png" width="100px"></a> <a href="/views/liberty/license.html">리버티 스킨</a>
+                        <a href="https://github.com/2DU/openNAMU"><img src="/views/liberty/img/on2.png" width="100px"></a> <a href="/views/liberty/license.html">Liberty License</a>
                     </div>
                 </div>
             </div>
