--- a/index.html
+++ b/index.html
@@ -27,11 +27,14 @@
             <nav class="navbar navbar-dark">
                 <a class="navbar-brand" href="/">{{imp[1][4]|safe}}</a>
                 <ul class="nav navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="/recent_changes"><span class="fa fa-refresh"></span><span class="hide-title">{{'recent'|load_lang}} {{'change'|load_lang}}</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/recent_discuss"><span class="fa fa-comments"></span><span class="hide-title">{{'recent'|load_lang}} {{'discussion'|load_lang}}</span></a>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle dropdown-toggle-fix" href="#" data-toggle="dropdown" aria-expanded="false">
+                            <span class="fa fa-refresh"></span><span class="hide-title">{{'recent'|load_lang}}</span>
+                        </a>
+                        <div class="dropdown-menu" role="menu">
+                            <a class="dropdown-item" href="/recent_changes"><span class="fa fa-refresh"></span><span class="hide-title">{{'change'|load_lang}}</span></a>
+                            <a class="dropdown-item" href="/recent_discuss"><span class="fa fa-comments"></span><span class="hide-title">{{'discussion'|load_lang}}</span></a>
+                        </div>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/random"><span class="fa fa-random"></span><span class="hide-title">{{'random'|load_lang}}</span></a>
