--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>{{imp[0]}} - {{imp[1][0]}}</title>
+        <link rel="stylesheet" href="/views/main_css/main.css">
         <link rel="stylesheet" href="/views/liberty/css/font-awesome/css/font-awesome.min.css">
         <link rel="stylesheet" href="/views/liberty/css/bootstrap.min.css">
         <link rel="stylesheet" href="/views/liberty/css/default.css">
