--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                             {% else %}
                                 <span class="fa fa-user-secret"></span>
                             {% endif %}
-                            <span class="hide-title">{{'user'|load_lang}}</span>
+                            <span class="hide-title">{{imp[2][5]}}</span>
                         </a>
                     </li>
                     <li class="nav-item">
