각주가 제대로 이동하지 않는 버그 수정

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <title>{{imp[0]}} - {{imp[1][0]}}</title>
         <link rel="stylesheet" href="/views/main_css/main.css">
+        <script src="/views/main_css/main.js"></script>
         <link rel="stylesheet" href="/views/liberty/css/font-awesome/css/font-awesome.min.css">
         <link rel="stylesheet" href="/views/liberty/css/bootstrap.min.css">
         <link rel="stylesheet" href="/views/liberty/css/default.css">
