번역 사라진 것 변경

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                             <span class="fa fa-refresh"></span><span class="hide-title">{{'recent'|load_lang}}</span>
                         </a>
                         <div class="dropdown-menu" role="menu">
-                            <a class="dropdown-item" href="/recent_changes"><span class="fa fa-refresh"></span><span class="hide-title">{{'change'|load_lang}}</span></a>
+                            <a class="dropdown-item" href="/recent_changes"><span class="fa fa-refresh"></span><span class="hide-title">{{'edit'|load_lang}}</span></a>
                             <a class="dropdown-item" href="/recent_discuss"><span class="fa fa-comments"></span><span class="hide-title">{{'discussion'|load_lang}}</span></a>
                         </div>
                     </li>
