한글로 된 것 수정

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 </ul>
                 <form method="post" action="/search" id="searchform" class="form-inline">
                     <div class="input-group">
-                        <input type="search" name="search" placeholder="검색" accesskey="f" class="form-control" id="searchInput" autocomplete="off">
+                        <input type="search" name="search" placeholder="Search" accesskey="f" class="form-control" id="searchInput" autocomplete="off">
                         <span class="input-group-btn">
                             <button formaction="/goto" name="go" value="보기" id="searchGoButton" class="btn btn-secondary"><span class="fa fa-eye"></span></button>
                             <button name="fulltext" value="검색" id="searchSearchButton" class="btn btn-secondary"><span class="fa fa-search"></span></button>
