하나만 더 수정

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         <a class="nav-link" href="/other"><span class="fa fa-wrench"></span><span class="hide-title">{{'tool'|load_lang}}</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/skin_set"><span class="fa fa-cog"></span></a>
+                        <a class="nav-link" href="/skin_set"><span class="fa fa-cog"></span><span class="hide-title">{{'skin_set'|load_lang}}</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/user">
