--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
         {{imp[3][3]|safe}}
         <link rel="stylesheet" href="/views/liberty/css/font-awesome/css/font-awesome.min.css?ver=1">
         <link rel="stylesheet" href="/views/liberty/css/bootstrap.min.css?ver=1">
-        <link rel="stylesheet" href="/views/liberty/css/default.css?ver=1">
+        <link rel="stylesheet" href="/views/liberty/css/default.css?ver=2">
         <link rel="stylesheet" href="/views/liberty/css/default_mobile.css?ver=1">
         <link rel="stylesheet" href="/views/liberty/css/jquery-ui.min.css?ver=1">
         <link rel="stylesheet" href="/views/liberty/css/style.css?ver=2">
+        <link href="https://fonts.googleapis.com/css?family=Dokdo|Gaegu|Nanum+Gothic|Nanum+Gothic+Coding|Nanum+Myeongjo|Noto+Serif+KR|Noto+Sans+KR&amp;display=swap&amp;subset=korean" rel="stylesheet">
         <link rel="shortcut icon" href="/views/liberty/img/on.ico">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
         <script type="text/javascript" src="/views/liberty/js/jquery-ui.min.js?ver=1"></script>
