--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="/views/liberty/css/jquery-ui.min.css?ver=1">
         <link rel="stylesheet" href="/views/liberty/css/style.css?ver=3">
         <link href="https://fonts.googleapis.com/css?family=Dokdo|Gaegu|Nanum+Gothic|Nanum+Gothic+Coding|Nanum+Myeongjo|Noto+Serif+KR|Noto+Sans+KR&amp;display=swap&amp;subset=korean" rel="stylesheet">
-        <link rel="shortcut icon" href="/views/liberty/img/on.ico">
+        <link rel="shortcut icon" href="/views/main_css/file/favicon.ico">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
         <script type="text/javascript" src="/views/liberty/js/jquery-ui.min.js?ver=1"></script>
         <script type="text/javascript" src="/views/liberty/js/bootstrap.min.js?ver=1"></script>
@@ -30,45 +30,49 @@
             <nav class="navbar navbar-dark">
                 <a class="navbar-brand" href="/">{{imp[1][4]|safe}}</a>
                 <ul class="nav navbar-nav">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle dropdown-toggle-fix" href="#" data-toggle="dropdown" aria-expanded="false">
-                            <span class="fa fa-refresh"></span><span class="hide-title">{{'recent'|load_lang}}</span>
-                        </a>
-                        <div class="dropdown-menu" role="menu">
-                            <a class="dropdown-item" href="/recent_changes"><span class="fa fa-refresh"></span><span class="hide-title">{{'edit'|load_lang}}</span></a>
-                            <a class="dropdown-item" href="/recent_discuss"><span class="fa fa-comments"></span><span class="hide-title">{{'discussion'|load_lang}}</span></a>
-                        </div>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/recent_changes"><span class="fa fa-refresh"></span><span class="hide-title">{{'recent_change'|load_lang}}</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/recent_discuss"><span class="fa fa-comments"></span><span class="hide-title">{{'recent_discussion'|load_lang}}</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/random"><span class="fa fa-random"></span><span class="hide-title">{{'random'|load_lang}}</span></a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/other"><span class="fa fa-wrench"></span><span class="hide-title">{{'tool'|load_lang}}</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/skin_set"><span class="fa fa-cog"></span><span class="hide-title">{{'skin_set'|load_lang}}</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/user">
-                            {% if imp[2][2] == 1 %}
-                                {% if imp[2][8] != '0' %}
-                                    <span class="fa fa-user-secret"></span>
-                                {% else %}
-                                    <span class="fa fa-user"></span>
-                                {% endif %}
-                            {% else %}
-                                <span class="fa fa-user-times"></span>
-                            {% endif %}
-                            <span class="hide-title">{{imp[2][5]}}</span>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle dropdown-toggle-fix" href="#" data-toggle="dropdown" aria-expanded="false">
+                            <span class="fa fa-wrench"></span><span class="hide-title">{{'tool'|load_lang}}</span>
                         </a>
+                        <div class="dropdown-menu" role="menu">
+                            <a class="dropdown-item" href="/skin_set"><span class="fa fa-cog"></span><span class="hide-title">{{'skin_set'|load_lang}}</span></a>
+                            <a class="dropdown-item" href="/upload"><span class="fa fa-upload"></span><span class="hide-title">{{'upload'|load_lang}}</span></a>
+                            <a class="dropdown-item" href="/recent_discuss"><span class="fa fa-plus-circle"></span><span class="hide-title">{{'tool'|load_lang}}</span></a>
+                        </div>
                     </li>
                 </ul>
+                <div class="navbar-login">
+                    {% if imp[2][2] == 0 %}
+                        <a href="/user" class="none-outline">
+                            <span class="fa fa-sign-in"></span>
+                        </a>
+                    {% else %}
+                        <div class="dropdown login-menu">
+                            <a href="/user">
+                                {% if imp[2][4] != '' %}
+                                    <img class="profile-img" src="https://secure.gravatar.com/avatar/{{imp[2][4]|md5_replace}}?d=identicon">
+                                {% else %}
+                                    <img class="profile-img" src="https://secure.gravatar.com/avatar/00000000000000000000000000000000?d=identicon&f=y">
+                                {% endif %}
+                            </a>
+                        </div>
+                    {% endif %}
+                </div>
                 <form method="post" action="/search" id="searchform" class="form-inline">
                     <div class="input-group">
                         <input type="search" name="search" placeholder="Search" accesskey="f" class="form-control" id="searchInput" autocomplete="off">
                         <span class="input-group-btn">
-                            <button formaction="/goto" name="go" value="보기" id="searchGoButton" class="btn btn-secondary"><span class="fa fa-eye"></span></button>
-                            <button name="fulltext" value="검색" id="searchSearchButton" class="btn btn-secondary"><span class="fa fa-search"></span></button>
+                            <button formaction="/goto" name="go" value="view" id="searchGoButton" class="btn btn-secondary"><span class="fa fa-eye"></span></button>
+                            <button name="fulltext" value="search" id="searchSearchButton" class="btn btn-secondary"><span class="fa fa-search"></span></button>
                         </span>
                     </div>
                 </form>
@@ -86,7 +90,7 @@
                         <div class="live-recent-header">
                             <ul class="nav nav-tabs">
                                 <li class="nav-item">
-                                    <a class="nav-link active" id="liberty-recent-tab1">최근바뀜</a>
+                                    <a class="nav-link active" id="liberty-recent-tab1">{{'recent_change'|load_lang}}</a>
                                 </li>
                             </ul>
                         </div>
@@ -105,7 +109,7 @@
                             </ul>
                         </div>
                         <div class="live-recent-footer">
-                            <a href="/recent_changes" title="최근 변경내역"><span class="label label-info">더보기</span></a>
+                            <a href="/recent_changes" title="{{'recent_change'|load_lang}}"><span class="label label-info">More</span></a>
                         </div>
                     </div>
                 </div>
@@ -156,7 +160,8 @@
                         {{imp[1][1]|safe}}
                     </p>
                     <div id="powered">
-                        <a href="https://github.com/2DU/openNAMU"><img src="/views/liberty/img/on2.png" width="100px"></a> <a href="/views/liberty/license.html">Liberty License</a>
+                        <a href="https://github.com/2DU/openNAMU"><img src="/views/main_css/file/s_logo.png" width="100px"></a>
+                        <a href="https://librewiki.net/"><img src="/views/liberty/img/designedbylibre.png" width="100px"></a>
                     </div>
                 </div>
             </div>
