--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <div class="dropdown-menu" role="menu">
                             <a class="dropdown-item" href="/skin_set"><span class="fa fa-cog"></span><span class="hide-title">{{'skin_set'|load_lang}}</span></a>
                             <a class="dropdown-item" href="/upload"><span class="fa fa-upload"></span><span class="hide-title">{{'upload'|load_lang}}</span></a>
-                            <a class="dropdown-item" href="/recent_discuss"><span class="fa fa-plus-circle"></span><span class="hide-title">{{'tool'|load_lang}}</span></a>
+                            <a class="dropdown-item" href="/other"><span class="fa fa-plus-circle"></span><span class="hide-title">{{'tool'|load_lang}}</span></a>
                         </div>
                     </li>
                 </ul>
