리버티 다크모드 추가

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         <script type="text/javascript" src="/views/liberty/js/bootstrap.min.js?ver=1"></script>
         <script type="text/javascript" src="/views/liberty/js/layout.js?ver=1"></script>
         <script type="text/javascript" src="/views/liberty/js/live_Recents.js?ver=2"></script>
+        <script type="text/javascript" src="/views/liberty/js/skin_set.js?ver=1"></script>
+        <script>main_load(); window.addEventListener('DOMContentLoaded', function() { skin_set(); });</script>
         {{imp[1][5]|safe}}
         {{imp[2][3]|safe}}
         <meta name="twitter:creator" content="@{{imp[1][0]}}">
