마이너 수정

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 </div>
                 <form method="post" action="/search" id="searchform" class="form-inline">
                     <div class="input-group">
-                        <input type="search" name="search" placeholder="Search" accesskey="f" class="form-control" id="searchInput" autocomplete="off">
+                        <input type="search" name="search" placeholder="{{'search'|load_lang}}" accesskey="f" class="form-control" id="searchInput" autocomplete="off">
                         <span class="input-group-btn">
                             <button formaction="/goto" name="go" value="view" id="searchGoButton" class="btn btn-secondary"><span class="fa fa-eye"></span></button>
                             <button name="fulltext" value="search" id="searchSearchButton" class="btn btn-secondary"><span class="fa fa-search"></span></button>
