--- a/index.html
+++ b/index.html
@@ -9,19 +9,28 @@
         {% endif %}
         <link   href="https://fonts.googleapis.com/css?family=Dokdo|Gaegu|Nanum+Gothic|Nanum+Gothic+Coding|Nanum+Myeongjo|Noto+Serif+KR|Noto+Sans+KR&amp;display=swap&amp;subset=korean"
                 rel="stylesheet">
-        <script src="/views/liberty/static/js/lib/jquery-2.2.4.min.js"></script>
-        <script src="/views/liberty/static/js/lib/jquery-ui.min.js"></script>
-        <script src="/views/liberty/static/bootstrap/bootstrap.min.js"></script>
-        <link rel="stylesheet" href="/views/liberty/static/font/font-awesome/css/font-awesome.min.css?ver=1">
-        <link rel="stylesheet" href="/views/liberty/static/css/lib/jquery-ui.min.css?ver=1">
-        <link rel="stylesheet" href="/views/liberty/static/bootstrap/bootstrap.min.css?ver=1">
-        <link rel="stylesheet" href="/views/liberty/static/css/liberty/style.css?ver=1">
+        <link   rel="stylesheet" 
+                href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" 
+                integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" 
+                crossorigin="anonymous" 
+                referrerpolicy="no-referrer">
+        <script src="https://code.jquery.com/jquery-2.2.4.min.js"
+                integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
+                crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"
+                integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="
+                crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" 
+                integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" 
+                crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+        <link rel="stylesheet" href="/views/liberty/css/bootstrap.min.css?ver=1">
         {{imp[3][3]|safe}}
-        <link rel="stylesheet" href="/views/liberty/static/css/liberty/default.css?ver=5">
-        <link rel="stylesheet" href="/views/liberty/static/css/liberty/default_mobile.css?ver=5">
-        <link rel="stylesheet" href="/views/liberty/static/css/wiki.css?ver=10">
-        <script type="text/javascript" src="/views/liberty/static/js/liberty.js?ver=10"></script>
-        <script type="text/javascript" src="/views/liberty/static/js/skin_set.js?ver=10"></script>
+        <link rel="stylesheet"         href="/views/liberty/css/default.css?ver=5">
+        <link rel="stylesheet"         href="/views/liberty/css/default_mobile.css?ver=5">
+        <link rel="stylesheet"         href="/views/liberty/css/style.css?ver=10">
+        <script type="text/javascript" src="/views/liberty/js/liberty.js?ver=10"></script>
+        <script type="text/javascript" src="/views/liberty/js/skin_set.js?ver=10"></script>
         <script>main_load(); window.addEventListener('DOMContentLoaded', skin_set);</script>
         <link rel="shortcut icon" href="/views/main_css/file/favicon.ico?ver=1">
         {{imp[1][5]|safe}}
@@ -173,7 +182,7 @@
                     </p>
                     <div id="powered">
                         <a href="https://github.com/2DU/openNAMU"><img src="/views/main_css/file/s_logo.png" width="100px"></a>
-                        <a href="https://librewiki.net/"><img src="/views/liberty/static/img/designedbylibre.png" width="100px"></a>
+                        <a href="https://librewiki.net/"><img src="/views/liberty/img/designedbylibre.png" width="100px"></a>
                     </div>
                 </div>
             </div>
