--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <link rel="stylesheet" href="/views/liberty/css/default_mobile.css?ver=1">
         <link rel="stylesheet" href="/views/liberty/css/jquery-ui.min.css?ver=1">
         {{imp[3][3]|safe}}
-        <link rel="stylesheet" href="/views/liberty/css/style.css?ver=8">
+        <link rel="stylesheet" href="/views/liberty/css/style.css?ver=9">
         {% if request.cookies.get('main_css_darkmode', '') == '1' %}
-            <link rel="stylesheet" href="/views/liberty/css/dark.css?ver=3">
+            <link rel="stylesheet" href="/views/liberty/css/dark.css?ver=4">
         {% endif %}
         <link href="https://fonts.googleapis.com/css?family=Dokdo|Gaegu|Nanum+Gothic|Nanum+Gothic+Coding|Nanum+Myeongjo|Noto+Serif+KR|Noto+Sans+KR&amp;display=swap&amp;subset=korean" rel="stylesheet">
         <link rel="shortcut icon" href="/views/main_css/file/favicon.ico">
@@ -91,9 +91,9 @@
             </nav>
         </div>
         <div class="scroll-buttons">
-            <a class="scroll-toc" href="#toc" id="scroll-button-toc"><i class="fa fa-list-alt" aria-hidden="true"></i></a>
-            <a class="scroll-button" href="#" id="scroll-button-left"><i class="fa fa-arrow-up" aria-hidden="true"></i></a>
-            <a class="scroll-bottom" href="#powered" id="scroll-button-right"><i class="fa fa-arrow-down" aria-hidden="true"></i></a>
+            <a class="scroll-toc" href="#toc" id="scroll-button-toc"><i class="fa fa-list-alt" aria-hidden="true"></i></a><!--
+         --><a class="scroll-button" href="#" id="scroll-button-left"><i class="fa fa-arrow-up" aria-hidden="true"></i></a><!--
+         --><a class="scroll-bottom" href="#powered" id="scroll-button-right"><i class="fa fa-arrow-down" aria-hidden="true"></i></a>
         </div>
         <div class="content-wrapper">
             <div class="liberty-sidebar">
