--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         {{imp[3][3]|safe}}
         <link rel="stylesheet" href="/views/liberty/css/style.css?ver=9">
         {% if request.cookies.get('main_css_darkmode', '') == '1' %}
+            <link rel="stylesheet" href="/views/main_css/css/sub/dark.css?ver=4">
             <link rel="stylesheet" href="/views/liberty/css/dark.css?ver=4">
         {% endif %}
         <link href="https://fonts.googleapis.com/css?family=Dokdo|Gaegu|Nanum+Gothic|Nanum+Gothic+Coding|Nanum+Myeongjo|Noto+Serif+KR|Noto+Sans+KR&amp;display=swap&amp;subset=korean" rel="stylesheet">
