--- a/index.html
+++ b/index.html
@@ -49,19 +49,35 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/recent_discuss"><span class="fa fa-comments"></span><span class="hide-title">{{'recent_discussion'|load_lang}}</span></a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/random"><span class="fa fa-random"></span><span class="hide-title">{{'random'|load_lang}}</span></a>
-                    </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle dropdown-toggle-fix" href="#" data-toggle="dropdown" aria-expanded="false">
                             <span class="fa fa-wrench"></span><span class="hide-title">{{'tool'|load_lang}}</span>
                         </a>
                         <div class="dropdown-menu" role="menu">
-                            <a class="dropdown-item" href="/skin_set"><span class="fa fa-cog"></span><span class="hide-title">{{'skin_set'|load_lang}}</span></a>
+                            <a class="dropdown-item" href="/random"><span class="fa fa-random"></span><span class="hide-title">{{'random'|load_lang}}</span></a>
+                            <a class="dropdown-item" href="/change/skin_set"><span class="fa fa-cog"></span><span class="hide-title">{{'skin_set'|load_lang}}</span></a>
                             <a class="dropdown-item" href="/upload"><span class="fa fa-upload"></span><span class="hide-title">{{'upload'|load_lang}}</span></a>
-                            <a class="dropdown-item" href="/other"><span class="fa fa-plus-circle"></span><span class="hide-title">{{'tool'|load_lang}}</span></a>
+                            <a class="dropdown-item" href="/other"><span class="fa fa-cogs"></span><span class="hide-title">{{'other_tool'|load_lang}}</span></a>
+                            {% if imp[2][9] != '0' %}
+                                <a class="dropdown-item" href="/manager"><span class="fa fa-folder"></span><span class="hide-title">{{'admin_tool'|load_lang}}</span></a>
+                            {% endif %}
                         </div>
                     </li>
+                    {% if imp[1][6] != '' %}
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle dropdown-toggle-fix" href="#" data-toggle="dropdown" aria-expanded="false">
+                                <span class="fa fa-plus-circle"></span><span class="hide-title">{{'added_menu'|load_lang}}</span>
+                            </a>
+                            <div class="dropdown-menu" role="menu">
+                                {% for added_top_menu in imp[1][6] %}
+                                    <a class="dropdown-item" href="{{added_top_menu[1]}}">
+                                        <span class="fa fa-plus"></span>
+                                        <span class="hide-title">{{added_top_menu[0]}}</span>
+                                    </a>
+                                {% endfor %}
+                            </div>
+                        </li>
+                    {% endif %}
                 </ul>
                 <div class="navbar-login">
                     {% if imp[2][2] == 0 %}
@@ -181,6 +197,5 @@
                 </div>
             </div>
         </div>
-        <script>window.addEventListener('DOMContentLoaded', skin_set);</script>
     </body>
 </html>
